fix overlap input text

--- a/frontend/src/assets/css/buttonBack.css
+++ b/frontend/src/assets/css/buttonBack.css
@@ -9,7 +9,7 @@
     border-radius: 8px;
     transition: all 0.3s ease;
 }
-.input-text{
+.back-button-input-text{
     font-size: var(--font-size-normal);
     width: 70px;
     height: 20px;
