--- a/frontend/src/assets/css/buttonLoginGoogle.css
+++ b/frontend/src/assets/css/buttonLoginGoogle.css
@@ -10,7 +10,7 @@
     transition: all 0.3s ease;
 }
   
-.text-input{
+.google-login-button-input-text{
   width: 216px;
   height: 20px;
   text-align: center;
